# rust-rest-api

./: Cargo.toml
src/: api_error.rs  main.rs
src/user/: dbconn.rs  email_verification.rs  mod.rs  model.rs  routes.rs
