[package]
name = "rest_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
dotenv = "0.15.0"
env_logger = "0.10.0"
listenfd = "1.0.0"
log = "0.4.17"
serde = {version = "1.0.152", features = ["derive"]}
serde_json = "1.0.91"
chrono = { version = "0.4.23", features = ["serde"] }
uuid = "1.2.2"
rand = "0.8.5"
rust-argon2 = "1.0.0"
actix-redis = { version = "0.12.0", features = ["web"] }
actix-session = "0.7.2"
hex = "0.4.3"
reqwest = { version = "0.11.13", features = ["json"] }

[dependencies.mongodb]
version = "2.3.1"
default-features = false
features = ["sync"]
